tests/compile_errors/001-const.buzz
// Can't assign to final variable
import "std";

test "`final` variable" {
    final yo = "yo";

    yo = "no way";
}

// function arguments are `final`
fun illegal(yo: str) > void {
    yo = "no way";
}

enum Hey {
    lo,
    joe,
}

test "assigning to enum field" {
    Hey.lo = 1;
}
